@startuml

rectangle ViewModels {

    rectangle Containers {
        class "TimerLayoutViewModel" as timerLayout {
            + TimerViewModel : ViewModelBase
            + CurrentViewModel : ViewModelBase
        }
    }

    class "TimerViewModel" as timerVM{

    }

    class "TimeFormViewModel" as timeForm{

    }

    class "ProjectFromViewModel" as projectForm{

    }

    class "RecordViewModelWithEdit" as recordEdit{

    }

    class "RecordViewModel" as recordVM{

    }

    class "EditableRecordViewModel" as editableRecordVM{

    }

    class "ListingRecordViewModel" as listing {

    }
    timerVM --|> recordEdit
    recordEdit --|> recordVM
    editableRecordVM --|> recordEdit

    timerLayout o-- timerVM
    recordEdit o-- timeForm
    recordEdit o-- projectForm

    timerLayout o-- listing

    listing "1"  --> "*" editableRecordVM

}
@enduml